# multi-account-aws-resource-auditor

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.txt  docker-compose.yml  pyproject.toml  requirements.txt  sample_config.yaml
.github/workflows/: ci.yml  scheduled-audit.yml
docs/: oidc-setup.md
src/: config.py
src/auditor/: assume.py  aws_clients.py  main.py
src/auditor/reporters/: csv_reporter.py  html_reporter.py
src/auditor/scanners/: ec2.py  iam.py  lambda_svc.py  rds.py  s3.py
terraform/: github_oidc_trust_policy.json  iam_auditor_role.tf
tests/: test_config.py
