[project]
name = "multi-account-aws-resource-auditor"
version = "0.1.0"
description = "Audits AWS resources across multiple accounts with cross-account role assumption."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Abhishek Kumar"}]
dependencies = [
    "boto3>=1.34.0",
    "PyYAML>=6.0.1",
    "jinja2>=3.1.4",
    "pandas>=2.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
